--- a/RecyclerViewExample/app/src/main/res/layout/view_holder_recycler_view_item.xml
+++ b/RecyclerViewExample/app/src/main/res/layout/view_holder_recycler_view_item.xml
@@ -6,10 +6,11 @@
     android:orientation="vertical">
 
     <ImageView
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="230dp"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:layout_marginHorizontal="20dp"
